bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:5: error: type mismatch;
 found   : Unit
 required: Int
    return 
    ^